CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

FUNCTION(PREPEND var prefix)
	SET(listVar "")
	FOREACH(f ${ARGN})
		LIST(APPEND listVar "${prefix}/${f}")
	ENDFOREACH(f)
	SET(${var} "${listVar}" PARENT_SCOPE)
ENDFUNCTION(PREPEND)

PROJECT(Algs)

SET(CMAKE_CXX_STANDARD 14)

SET(AUX_FLAGS "" CACHE STRING "Additional flags for a compiler")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${AUX_FLAGS}")

SET(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET(LIBS_DIR ${CMAKE_SOURCE_DIR}/libs)
SET(TESTS_DIR ${CMAKE_SOURCE_DIR}/tests)

SET(TESTS_FILES main.cpp
				SortTests.cpp
				InvertionsTests.cpp
				CentroidTests.cpp
				CentroidDecompositionTests.cpp
	)
PREPEND(TESTS_FILES ${TESTS_DIR} ${TESTS_FILES})

INCLUDE_DIRECTORIES(${LIBS_DIR}/catch)
INCLUDE_DIRECTORIES(${SRC_DIR})

ADD_EXECUTABLE(Tests "${TESTS_FILES}")

SET_PROPERTY(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Tests)
