CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(Algs)

SET(CMAKE_CXX_STANDARD 14)

SET(AUX_FLAGS "" CACHE STRING "Additional flags for a compiler")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${AUX_FLAGS}")

SET(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET(LIBS_DIR ${CMAKE_SOURCE_DIR}/deps)
SET(TESTS_DIR ${CMAKE_SOURCE_DIR}/tests)

FILE(GLOB TESTS_FILES "${TESTS_DIR}/*.cpp")

INCLUDE_DIRECTORIES(${LIBS_DIR}/catch)
INCLUDE_DIRECTORIES(${SRC_DIR})

ADD_EXECUTABLE(Tests "${TESTS_FILES}")

SET_PROPERTY(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Tests)
